# uuid-string

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml  settings.json
.github/workflows/: package-version-patch.yml  tests.yml
tests/: test_import.py  test_uuid_shaped_string.py
uuid_shaped_string/: __init__.py  uuid_shaped_string.py  uuid_string.py
uuid_string/: __init__.py
