[project]
name = "uuid_shaped_string"
version = "0.1.0"
description = "String in UUID format"
authors = [{name = "Tesla2000", email = "fratajczak124@gmail.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["uuid-shaped-string"]

[dependency-groups]
tests = [
    "pydantic>=2.12.5",
]
