[project]
name = "uuid_shaped_string"
version = "0.1.10"
description = "String in UUID format"
authors = [{name = "Tesla2000", email = "fratajczak124@gmail.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typing_extensions>=4.0; python_version < '3.10'",
]

[dependency-groups]
test = [
    "pydantic>=2.12.5",
    "pytest>=8.4.2",
    "pytest-cov>=7.1.0",
]


[tool.coverage.run]
branch = true
source = ["uuid_string"]

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_covered = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["uuid_shaped_string"]

